Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1459,7 +1459,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    s = slope(x_values, y_values)\n",
-    "    b= y_values[0]-m*x_values"
+    "    b= y_values[0]-mx"
    ]
   },
   {
