Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1453,32 +1453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    m = slope(x_values, y_values)\n",
+    "    s = slope(x_values, y_values)\n",
     "    b= y_values[0]-m*x_values[0]\n",
     "    return b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_intercept([200, 400], [400, 700]) # 100"
    ]
