--- a/index.ipynb
+++ b/index.ipynb
@@ -1571,7 +1571,8 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    y = m*"
+    "    y = m*x_value+b\n",
+    "    return y"
    ]
   },
   {
